# Mercury

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  prebuild.sh
.devcontainer/: Dockerfile
.github/workflows/: cmake.yml
inc/: HGELFFile.hpp  HGELFFileFormat.hpp  HGLog.hpp
src/: CMakeLists.txt  HGELFFile.cpp  HGLog.cpp  HGMain.cpp
test/: CMakeLists.txt  HGTest.cpp
